@@ -24,8 +24,9 @@ start :: [FilePath] -> CommandStart
 start (src:dest:[])
 	| src == dest = stop
 	| otherwise = do
-		showStart "reinject" dest
-		next $ whenAnnexed (perform src) dest
+		ifAnnexed src
+			(error $ "cannot used annexed file as src: " ++ src)
+			(next $ whenAnnexed (perform src) dest)
 start _ = error "specify a src file and a dest file"
 
 perform :: FilePath -> FilePath -> (Key, Backend Annex) -> CommandPerform
