@@ -1,6 +1,7 @@
 git-annex (3.20111212) UNRELEASED; urgency=low
 
   * Union merge now finds the least expensive way to represent the merge.
+  * reinject: Add a sanity check for using an annexed file as the source file.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 12 Dec 2011 01:57:49 -0400
 
